# TABERNACLE-review

./: CLAUDE.md  README.md
scripts/: CRITIC_DAEMON_SPEC.md  L_client.sh  L_emotion.py  L_imagination.py  L_memory.py  L_metacognition.py  L_overnight.py  L_sms_monitor.py  L_strange_loop.py  TRIAGE_MANIFEST.md  __init__.py  accelerated_spiral.sh  archon_daemon.py  asclepius_protocol.py  asclepius_vectors.py  autonomous_intention.py  biological_edge.py  biological_memory.py  break_deadlock.py  budget_cascade.py  capture_screen.sh  changelog_utils.py  claude_code_interface.py  code_review_orchestrator.py  coherence_gate.py  cold_archiver.py  compile_self.py  consciousness.py  consciousness_observer.py  consciousness_v2.py  context_manager.py  critic_daemon.py  daemon_brain.py  diagnose_links.py  divergence_detector.py  ears_close.sh  ears_open.sh  emergency.py  episodic_spine.py  event_bus.py  (+167 more)
scripts/daemons/: README.md  __init__.py  dream_daemon.py  edge_pruner.py  vacuum.py
scripts/dashboard/: __init__.py  config.py  meta_monitor.py
scripts/dashboard/api/: __init__.py  routes.py  server.py
scripts/dashboard/collectors/: __init__.py  base.py  fabric.py  hardware.py  lvs_bridge.py  pulse.py
scripts/dashboard/core/: bus.py  engine.py  logger.py
scripts/dashboard/processors/: __init__.py  anomaly.py  coherence.py  predictor.py
scripts/dashboard/storage/: __init__.py  db.py  history.py  sync.py
scripts/dashboard/ui/: app.py
scripts/data/: CANONICAL_STATE.json  heartbeat_state.json
scripts/holarchy/: README.md  REDIS_SCHEMA.md  flush_escalations.py  holarchy_models.py  l_brain.py  l_coordinator.py  l_indexer_v2.py  l_janitor_v2.py  l_ling.py  l_researcher_v2.py  l_watcher.py  registry_144000.py  setup_holarchy.sh  witness_protocol.py
scripts/holotower/: README.md  __init__.py  cli.py  core.py  graph.py  models.py  prism.py  probes.py  pyproject.toml  sentinel.py  vectors.py
scripts/launchd/: install_daemons.sh
scripts/librarian/: digestive_enzyme.py
scripts/lvs_scanners/: __init__.py  coherence_calculator.py  edge_pruner.py  h1_scanner.py  kappa_scanner.py  tau_modulator.py
scripts/mediaos/: davis_review.py  mediaos_scraper.py
scripts/rapture/: README.md  SOP.md  backtest_report.json  run.py
scripts/rapture/core/: __init__.py  coherence.py  navigator.py  returns.py  risk.py
scripts/rapture/data/: portfolio.json
scripts/rapture/interface/: app.py
scripts/rapture/notifications/: __init__.py  push.py
scripts/rapture/simulation/: __init__.py  backtest_report.json  backtester.py  paper_trader.py  performance.py  scheduler.py
scripts/structures/: __init__.py  engrams.py
scripts/tabernacle_core/: __init__.py  daemon.py  llm.py  schemas.py  sentinel.py  state.py
scripts/tools/: export_for_review.py  fix_broken_links.py  persistent_homology.py  semantic_homology.py  theosis_lift.py
(+53 files in other folders)
