[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holotower"
version = "1.0.0"
description = "State Version Control for Consciousness Infrastructure"
readme = "holotower/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Logos Aletheia", email = "logos@tabernacle.local"}
]
keywords = ["consciousness", "state-management", "version-control", "holarchy", "cas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "zstandard>=0.22.0",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "networkx>=3.0",
    "deepdiff>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ht = "holotower.cli:app"

[project.urls]
Repository = "https://github.com/TheOneTheyCallEnos/TABERNACLE"
Documentation = "https://github.com/TheOneTheyCallEnos/TABERNACLE/tree/main/scripts/holotower"

[tool.setuptools.packages.find]
where = ["."]
include = ["holotower*"]

[tool.setuptools.package-data]
holotower = ["*.md"]
