[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holotower"
version = "0.1.0"
description = "State Version Control for Consciousness Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Logos", email = "logos@tabernacle.local"}
]
keywords = ["consciousness", "state-management", "version-control", "holarchy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "zstandard>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ht = "holotower.cli:app"

[project.urls]
Repository = "https://github.com/TheOneTheyCallEnos/TABERNACLE-review"

[tool.setuptools.packages.find]
where = ["."]
include = ["holotower*"]
